--- a/src/styles/scss/Contact.scss
+++ b/src/styles/scss/Contact.scss
@@ -130,6 +130,17 @@ label {
 }
 
 //landscape size
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 812px) 
+  and (orientation: landscape) { 
+      #contact {
+        height: 100%;
+      }
+
+}
+
+
 @media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) and (orientation: landscape) {
   #contact {
     height: 100vh;
