--- a/src/styles/scss/Splash.scss
+++ b/src/styles/scss/Splash.scss
@@ -49,6 +49,7 @@ clip-path: circle(95.7% at 50% 5%);
     }
 }
 
+
 @media screen and (min-width: 630px){
     #splash {
         clip-path: none;
@@ -58,6 +59,16 @@ clip-path: circle(95.7% at 50% 5%);
         display: block;
         font-size: 1.2em;
     }
+}
+
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 812px) 
+  and (orientation: landscape) { 
+      #down-arrow{
+          display: none;
+      }
+
 }
 
 @media screen and (min-width: 768px){
